Added banner and wrappers

--- a/pages/index.html
+++ b/pages/index.html
@@ -54,6 +54,36 @@
       </div>
     </section>
 
-    <h1>Ligeirinho água e gás</h1>
+    <div class="Banner1">
+      <div class="BannerFlex">
+        <div class="wrapper">
+        <div class="alinhamento1">
+          <h6>PROPOSITO DA ÁGUA</h6>
+          <h3>NUTRIR O APETITE DAS PESSOAS DE TRANSFORMAREM SEUS MUNDOS</h3>
+          <p>
+            Lorem ipsum dolor sit amet. Est dolorem perspiciatis ea error modi
+            et minima omnis est quia perspiciatis. Vel voluptas voluptatem in
+            exercitationem odio ut necessitatibus laboriosam hic esse sequi ut
+            voluptatem asperiores sed expedita omnis est eligendi nihil. Qui
+            culpa quaerat quo officia aspernatur et debitis eveniet ex animi
+          </p>
+          <a href="">Saiba Mais</a>
+        </div>
+        </div>
+        <div class="wrapper2">
+        <div class="alinhamento2">
+          <h6>PROPOSITO DA ÁGUA</h6>
+          <h3>NUTRIR O APETITE DAS PESSOAS DE TRANSFORMAREM SEUS MUNDOS</h3>
+          <p>
+            Lorem ipsum dolor sit amet. Est dolorem perspiciatis ea error modi
+            et minima omnis est quia perspiciatis. Vel voluptas voluptatem in
+            exercitationem odio ut necessitatibus laboriosam hic esse sequi ut
+            voluptatem asperiores sed expedita omnis est eligendi nihil. Qui
+            culpa quaerat quo officia aspernatur et debitis eveniet ex animi
+          </p>
+          <a href="">Saiba Mais</a>
+      </div>
+      </div>
+    </div>
   </body>
 </html>
