--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header class="header">
         <h2>
           <a href="#" class="header_logo"
-            ><img src="..\images\Logo Versão Colorida.png" alt=""
+            ><img src="root/images/Logo Versão Colorida.png" alt=""
           /></a>
         </h2>
         <div class="header_navigation">
